less offensive language

--- a/pto/base/templates/500.html
+++ b/pto/base/templates/500.html
@@ -91,7 +91,7 @@ section {
     </header>
 
     <section id="content">
-    <h1>Error: Shit ain't working right</h1>
+    <h1>Error: Something isn' working right</h1>
     <hr>
     <p>Things that might help:</p>
     <ul>
